GPC/tests/examples/fail/constructArray3.td
;constructArray3.yml

(CoreServices.Begin.begin 'GPRM.Kernel.Test.Test 'GPRM.Kernel.Test.Test 
    '(CoreServices.RETURN.return '0))